# Dragon-Mugen

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.githooks/: pre-commit
artifacts/simulations/: build_evilken_trip_recovery_sim.py  evilken_trip_fall_bounce_getup.html
dlc/arena/: README.md  SCOPE.md  TEST_PLAN.md  arena_config.json
docs/: ANIMATION_MAPPING_AUDIT.md  ARCHITECTURE_RECOVERY_ROADMAP_AUDIT.md  BENCHMARK_CHARACTERS.md  BUGS.md  COMPATIBILITY_AUDIT.md  CTRLSET_COMMAND_CONTROL_CONTROLLER_RUNTIME_AUDIT.md  DEVELOPMENT.md  DRAGON_EXTENSIONS.md  FAILURE_POSTMORTEM_2026_06_04.md  FEATURE_COMPLETION_POLICY.md  FEATURE_LEDGER.md  FIGHT_OVERLAY_CONVERSION_AUDIT.md  GAMEPLAY_BUG_BACKLOG.md  LIVE_VERIFICATION_MATRIX.md  MEMORY_MODEL.md  METER_STAT_CONTROLLER_RUNTIME_AUDIT.md  MISC_MOVEMENT_STATE_CONTROLLER_RUNTIME_AUDIT.md  MODULE_SPLIT_PLAN.md  MOVEMENT_POSITION_CONTROLLER_RUNTIME_AUDIT.md  MVP.md  OVERLAY_MODULE_CONVERSION_AUDIT.md  POSITION_GROUNDING_CONTROLLER_RUNTIME_AUDIT.md  POSSET_GROUNDING_CONTROLLER_RUNTIME_AUDIT.md  REGRESSION_CHECKLIST.md  REPOSITORY_POLICY.md  RUNTIME_CONTROLLER_EXECUTION_AUDIT.md  RUNTIME_CONTROLLER_EXECUTION_SPLIT_AUDIT.md  RUNTIME_VERIFICATION_CHECKLIST.md  STRICT_ROADMAP.md  TRAINING_OVERLAY_CONVERSION_AUDIT.md  TRANSITIONAL_HELPER_BOUNDARY_AUDIT.md  TYPE_EXTRACTION_AUDIT.md
docs/FEATURE_SPECS/: 0001_architecture_recovery.md  README.md
engine/src/: App.cpp  AppTypes.h  AppVerificationBridge.h  ArenaConfig.cpp  ArenaConfig.h  ArenaModeCombat.h  ArenaModeRuntime.h  ArenaModeState.h  ArenaSetupOverlay.cpp  ArenaSetupOverlay.h  AudioRuntime.h  CharacterSelectOverlay.cpp  CharacterSelectOverlay.h  CommandParsing.h  CommandRecognition.h  CommandStateEligibility.h  Compatibility.cpp  FallFallbackRuntime.h  FightData.cpp  FightDisplayState.h  FightFreezeWatchRuntime.h  FightHudOverlay.cpp  FightHudOverlay.h  FightMessageState.h  FightPresentationShared.h  FightPresentationView.h  FightResultOverlay.cpp  FightResultOverlay.h  FightSessionRuntime.h  FrontendFlow.h  FrontendMenu.cpp  FrontendMenu.h  FrontendState.h  Input.cpp  Input.h  MainMenuOverlay.cpp  MainMenuOverlay.h  MugenData.cpp  MugenText.cpp  OptionsMenuOverlay.cpp  (+60 more)
engine/tools/: audit_mugen_compat.py  check_feature_specs.py  dev_check.py  guard_active_change.py  guard_architecture.py  inspect_mugen_content.py
game/: README.md
game/chars/: README.md
game/data/: README.md  fight.def  select.def  system.def
game/font/: README.md
game/plugins/: README.md
game/save/: README.md
tools/: check_file_sizes.py
(+87 files in other folders)
